<resources>
    <string name="tab_souyue">搜悦</string>
    <string name="tab_msg">聊天</string>
    <string name="tab_disvover">发现</string>
    <string name="tab_my">我的</string>
    <string name="disclaimer_context">搜悦提醒您：\n
        \t\t在使用搜悦前，请您务必仔细阅读并透彻理解本声明。您可以选择不使用搜悦，但如果您使用搜悦，您的使用行为将被视为对本声明全部内容的认可。\n
        \t\t搜悦的所提供的搜索结果是根据您键入的关键字自动生成到第三方网页的链接，其他一切因使用搜悦而可能遭致的意外、疏忽、侵权及其造成的损失（包括因下载被搜索链接到的第三方网站内容而感染电脑病毒），搜悦对其概不负责，亦不承担任何法律责任。\n
        \t\t任何通过使用搜悦而搜索链接到的第三方网页均系他人制作或提供，您可能从该第三方网页上获得资讯及享用服务，搜悦对其合法性概不负责，亦不承担任何法律责任。\n
        \t\t搜悦搜索结果根据您键入的关键字自动搜索获得并生成，不代表搜悦赞成被搜索链接到的第三方网页上的内容或立场。\n
        \t\t您应该对使用搜索引擎的结果自行承担风险。搜悦不做任何形式的保证：不保证搜索结果满足您的要求，不保证搜索服务不中断，不保证搜索结果的安全性、正确性、及时性、合法性。因网络状况、通讯线路、第三方网站等任何原因而导致您不能正常使用搜悦，搜悦不承担任何法律责任。\n
        \t\t搜悦尊重并保护所有使用搜悦用户的个人隐私权。但搜悦提醒您：您在使用搜索引擎时输入的关键字将不被认为是您的个人隐私资料。\n
        \t\t任何单位或个人认为通过搜悦搜索链接到的第三方网页内容可能涉嫌侵犯其信息网络传播权，应该及时向搜悦提出书面权利通知，并提供身份证明、权属证明及详细侵权情况证明。搜悦在收到上述法律文件后，将会依法尽快断开相关链接内容。</string>
    <string-array name="appShare">
        <item>我推荐给你一款出色的手机阅读应用：%s——超越传统搜索体验的搜索阅读工具。</item>
        <item>我推荐给你一款出色的手机阅读应用：%s</item>
    </string-array>
    <string name="attention">注意</string>
    <string name="delete_all">是否要删除所有文字？</string>
    <string name="ok">是</string>
    <string name="cancel">否</string>
    <string name="word_limit">还可以输入%d字</string>
    <string name="select_limit">最多能选%1$s个关键词</string>
    <string name="select_repeat">与已选项重复，请重新选择</string>
    <string name="close">关闭</string>
    <string name="send_sucess">分享成功！</string>
    <string name="del_pic">是否删除图片？</string>
    <string name="app_name">中搜搜悦</string>
    <string name="result_400">分享失败，请稍候再试！</string>
    <string name="result_403">分享失败，请重新绑定微博帐号</string>
    <string name="result_40038">不合法的微博</string>
    <string name="result_40012">内容为空</string>
    <string name="result_40023">用户不存在</string>
    <string name="result_40045">分享失败，不支持该图片格式，仅支持JPG、GIF、PNG</string>
    <string name="result_40008">分享失败，图片太大</string>
    <string name="result_40013">输入文字太长，请确认不超过140个字符</string>
    <string name="result_40025">分享失败，已经发过相同的微博</string>
    <string name="result_40072">分享失败，请重新绑定微博帐号</string>
    <string name="result_40111">分享失败，请重新绑定微博帐号</string>
    <string name="result_10013">分享失败，不合法的微博用户</string>
    <string name="result_10024">分享失败，用户请求频次超过上限</string>
    <string name="result_10001">分享失败，微博系统错误</string>
    <string name="result_10009">分享失败，任务过多，微博系统繁忙</string>
    <string name="result_10014">分享失败，访问权限受限</string>
    <string name="result_20003">分享失败，用户不存在，请重新登录</string>
    <string name="result_20012">分享失败，输入文字太长,请重新输入</string>
    <string name="result_20015">分享失败，账号、IP或应用非法，暂时无法完成此操作</string>
    <string name="result_20016">分享内容过于频繁，稍候再发吧</string>
    <string name="result_20019">分享失败，提交相似或者相同的信息</string>
    <string name="result_20021">分享失败，包含广告信息或非法内容</string>
    <string name="result_20111">分享失败，不能发布相同的微博</string>
    <string name="result_default">分享失败，请检查微博内容和帐号后重试</string>
    <string name="titlebar_weibo_title">分享到新浪微博</string>
    <string name="titlebar_renren_title">分享到人人网</string>
    <string name="titlebar_tencent_weibo_title">分享到腾讯微博</string>
    <string name="weibo_shareing">正在发送分享…</string>
    <string name="bound_fail">微博绑定失败</string>
    <string name="weibo_from">分享自@</string>
    <string name="tweibo_from">分享自@</string>
    <string name="share_sms">更多精彩来自中搜搜悦</string>
    <string name="loading_progress_hint">加载中，请稍候</string>
    <string name="clear_cache_prompt">提示</string>
    <string name="clear_cache_warning">您确认要清理缓存吗？</string>
    <string name="clearing">缓存清理中…</string>
    <string name="clear_ok">清理</string>
    <string name="pref_clear_show">0 KB</string>
    <string name="pref_clear_succ">清理完毕</string>
    <string name="working">请稍等，正在处理…</string>
    <string name="exit_app">再按一次退出应用</string>
    <string name="setting">设置</string>
    <string name="settingActivity_user_login">帐号登录</string>
    <string name="account_bound">帐号绑定</string>
    <string name="settingActivity_msgpush_list">消息推送列表</string>
    <string name="settingActivity_msgpush_setting">消息推送设置</string>
    <string name="settingActivity_sub_list">设置订阅列表</string>
    <string name="settingActivity_clean_cache">清除缓存</string>
    <string name="settingActivity_laod_image">2G/3G网络加载图片</string>
    <string name="settingActivity_set_font">正文字体大小</string>
    <string name="settingActivity_usinghelp">新手引导</string>
    <string name="settingActivity_grade">喜欢就给我们评分吧!</string>
    <string name="settingActivity_recommend_friend">推荐给好友</string>
    <string name="settingActivity_feedback">意见建议</string>
    <string name="settingActivity_checkversion">新版本检测</string>
    <string name="settingActivity_about">关于我们</string>
    <string name="settingActivity_contact_us">联系我们</string>
    <string name="setting_font_big">大</string>
    <string name="setting_font_middle">中</string>
    <string name="setting_font_small">小</string>
    <string name="loginActivity_username_name">用户名：</string>
    <string name="loginActivity_pwd_pwd">密\t\t码：</string>
    <string name="loginActivity_username_des">搜悦号/手机号</string>
    <string name="loginActivity_pwd_des">请输入密码</string>
    <string name="loginActivity_login">登录</string>
    <string name="loginActivity_input_name_pwd">请输入用户名和密码</string>
    <string name="loginActivity_input_name">请输入用户名</string>
    <string name="loginActivity_input_pwd">请输入密码</string>
    <string name="loginActivity_pd_message">正在登录服务器，请稍候…</string>
    <string name="loginActivity_other">你也可以用以下社交网络帐号登录。</string>
    <string name="loginActivity_sinaweibo">新浪微博</string>
    <string name="loginActivity_qq">QQ</string>
    <string name="loginActivity_renren">人人网</string>
    <string name="renren_login_error">登录失败</string>
    <string name="login_sns_getinfoing">正在获取您的信息</string>
    <string name="bound">绑定</string>
    <string name="unbound">解绑</string>
    <string name="unbound_success">成功解绑</string>
    <string name="bound_suc">绑定成功</string>
    <string name="unbound_tweibo">腾讯微博</string>
    <string name="unbound_des">这是您用来登录的帐号，无法解绑，如要停止使用，请退出。</string>
    <string name="login_dialog_content">现在手机号注册即得%s中搜币,用它去玩【欢乐老虎机】，快来吧!</string>
    <string name="login_youbao_dialog_content">中搜搜悦牵手友宝便利机注册即送珍珍荔枝饮品一瓶！（仅限北京地区，其它地区注册即送%s个中搜币）</string>
    <string name="login_dialog_notip">不再提醒</string>
    <string name="login_dialog_goreg">立即注册</string>
    <string name="my_login_btn_text">登录</string>
    <string name="my_reg_btn_text">注册</string>
    <string name="my_login_desc_text">登录%s,体验更多功能</string>
    <string name="registerActivity_varCode">验证码：</string>
    <string name="registerActivity_username">用户名：</string>
    <string name="registerActivity_nickname">昵\t\t称：</string>
    <string name="registerActivity_username_des">2–20个字符，一个汉字为2个字符</string>
    <string name="registerActivity_pwd1">密\t\t码：</string>
    <string name="registerActivity_pwd1_des">6–14个字符，区分大小写</string>
    <string name="registerActivity_pwd2">确认密码：</string>
    <string name="registerActivity_pwd2_des">请再次输入密码确认</string>
    <string name="registerActivity_email">邮\t\t箱：</string>
    <string name="registerActivity_email_des">输入您常用的电子邮箱地址</string>
    <string name="registerActivity_my_read">我已阅读并接受</string>
    <string name="registerActivity_user_agreement">《用户协议》</string>
    <string name="registerActivity_sure">确定</string>
    <string name="registerActivity_register">注册</string>
    <string name="username_no_empty">用户名不能为空</string>
    <string name="username_length_error">用户名长度不符</string>
    <string name="nickname_no_empty">昵称不能为空</string>
    <string name="notename_no_empty">备注名不能为空</string>
    <string name="nickname_format_error">昵称格式不正确</string>
    <string name="notename_format_error">备注名格式不正确</string>
    <string name="nickname_length_error">昵称长度不符</string>
    <string name="notename_length_error">备注名长度不符</string>
    <string name="email_no_empty">邮箱不能为空</string>
    <string name="email_format_error">邮箱格式不正确</string>
    <string name="pwd_no_empty">密码不能为空</string>
    <string name="vcode_tip">请输入正确的验证码</string>
    <string name="pwd_length_error">密码长度不符</string>
    <string name="twice_pwd_error">两次输入密码不一致</string>
    <string name="data_no_full">资料未填写完整</string>
    <string name="user_agreement_empty">未同意服务条款</string>
    <string name="user_registering">正在创建帐号，请稍候…</string>
    <string name="email_no_exist">邮箱不存在</string>
    <string name="validate_email">正在验证邮箱</string>
    <string name="register_success">注册成功</string>
    <string name="email_sended">系统已向您的邮箱发送确认邮件，点击邮件中的确认链接即可激活帐号。</string>
    <string name="email_adds">您的邮箱地址：</string>
    <string name="back_mycenter">返回个人中心</string>
    <string name="msgpushActivity_history">消息推送历史</string>
    <string name="msgPushHistoryActivity_msgpush_empty">系统推送列表为空</string>
    <string name="msgpush_user_empty">用户推送列表为空</string>
    <string name="systemwarning">系统提醒</string>
    <string name="quitsouyue">是否清空消息推送列表？</string>
    <string name="msgPushHistoryActivity_msgpush_is_empty">列表数据已清空</string>
    <string name="msgPushHistoryActivity_msgpush_clean_loading">正在清空列表数据，请稍候…</string>
    <string name="push_user_recommend">用户推送</string>
    <string name="push_ent_recommend">商家推送</string>
    <string name="push_system_recommend">系统推送</string>
    <string name="push_system">系统消息推送</string>
    <string name="push_sound_switch">消息推送声音提示</string>
    <string name="message">消息</string>
    <string name="cannotSend">红包，动画表情，语音，密信，赠/求中搜币的内容不能被转发</string>
    <string name="ikonwn">知道了</string>
    <string name="dont_have_camera_app">该设备没有拍照应用</string>
    <string name="cant_insert_album">发生意外，无法写入相册</string>
    <string name="data_loading">正在上传头像，请稍候…</string>
    <string name="more_loading">加载中…</string>
    <string name="nomore_loading">已经加载到最多</string>
    <string name="token_error">Token无效</string>
    <string name="high_pull_loadMore">更多</string>
    <string name="neterror">无网络可用</string>
    <string name="edit_succ">修改成功</string>
    <string name="edit_fail">修改失败，请重试</string>
    <string name="registerActivity_update_error">下载失败</string>
    <string name="registerActivity_has_no_update">您使用的已经是最新版本</string>
    <string name="registerActivity_none_wifi">没有wifi连接， 只在wifi下更新</string>
    <string name="registerActivity_time_out">连接超时，请稍候重试</string>
    <string name="usercomment_commit_empty">您还没有发出任何评论</string>
    <string name="usercomment_reply_empty">暂时没有任何回复</string>
    <string name="userAccountActivity_my_reply">与我相关</string>
    <string name="userAccountActivity_islogout">是否确认退出？</string>
    <string name="user_account">我</string>
    <string name="user_center">我的搜悦</string>
    <string name="my">我的</string>
    <string name="mycomments">我的评论</string>
    <string name="my_send_comments">我的评论</string>
    <string name="my_send_movement">我的活动</string>
    <string name="reply_me_comment">回复我的</string>
    <string name="upload_photo_fail">上传头像失败</string>
    <string name="upload_photo_success">上传头像成功</string>
    <string name="upload_background_success">上传背景图成功</string>
    <string name="update_nick_success">修改昵称成功</string>
    <string name="send">发送</string>
    <string name="audio_del">重录</string>
    <string name="audio_click_say">按住说话</string>
    <string name="user_phonecode_in_login">请输入收到的验证码</string>
    <string name="complete">完成</string>
    <string name="user_register_resend_phonecode_login">重新发送(60)</string>
    <string name="user_in_new_password_login">请输入新密码</string>
    <string name="user_send_msg_notify_login">验证短信已发送至</string>
    <string name="edit_nick_des">支持中英文、数字</string>
    <string name="user_id">用户ID</string>
    <string name="week_rank">周排名:</string>
    <string name="month_rank">月排名:</string>
    <string name="score">积分:</string>
    <string name="password_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="webim_view_title">网页版聊天</string>
    <string name="webim_view_tips">请点击下面按钮完成登录</string>
    <string name="webim_view_login">登 &#160;&#160; 录</string>
    <string name="webim_view_cancel">取 &#160;&#160; 消</string>
</resources>