<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <include layout="@layout/titlebar_onlytitle_toac" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:text="@string/registerActivity_varCode"
                android:textColor="#787878"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/et_vCode"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:background="@null"
                android:hint="请输入验证码"
                android:singleLine="true"
                android:textColor="#a7a7a7"
                android:textSize="12dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_resend"
            android:layout_width="100dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="重新发送（60）"
            android:textColor="#787878"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:text="@string/registerActivity_nickname"
            android:textColor="#787878"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_reg_nickname"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:hint="@string/edit_nick_des"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="#a7a7a7"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:layout_marginBottom="-1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:text="@string/registerActivity_pwd1"
            android:textColor="#787878"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_reg_pwd1"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:digits="@string/password_digits"
            android:hint="@string/registerActivity_pwd1_des"
            android:inputType="textPassword"
            android:maxLength="14"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="#a7a7a7"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="-1dp"
        android:background="@drawable/edittext_bg"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:text="@string/registerActivity_pwd2"
            android:textColor="#787878"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/et_reg_pwd2"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:digits="@string/password_digits"
            android:hint="@string/registerActivity_pwd2_des"
            android:inputType="textPassword"
            android:maxLength="14"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="#a7a7a7"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_reg_checkbox"
            style="@style/MyCheckBox"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerActivity_my_read"
            android:textColor="#696868"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_reg_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/registerActivity_user_agreement"
            android:textColor="#195db9"
            android:textSize="12dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_reg_sure"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:background="@drawable/loginbtn_text_bg"
        android:text="完成"
        android:textColor="@color/white"
        android:textSize="17dp" />

</LinearLayout>