<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#DFDFDF"
    android:orientation="vertical">

    <include layout="@layout/titlebar_onlytitle_toac" />

    <!-- 短信发送提示 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_send_msg_notify_login"
            android:textColor="#7e7e7e"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_login_send_msg_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="+86 155111111"
            android:textColor="#5594ca"
            android:textSize="14sp" />
    </LinearLayout>
    <!-- 注册手机号 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/login_part_bg"
        android:orientation="vertical"

        >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_login_validte_code"
                style="@style/login_edittext_combin_style"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:hint="@string/user_phonecode_in_login"
                android:maxLength="6"
                android:numeric="integer"
                android:singleLine="true" />

            <Button
                android:id="@+id/getverificode"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_alignRight="@id/et_login_validte_code"
                android:background="@drawable/login_button_validate_selector"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/user_register_resend_phonecode_login"
                android:textColor="#7e7e7e"
                android:textSize="14sp" />


        </RelativeLayout>
        <!-- 密码 -->
        <EditText
            android:id="@+id/et_login_new_password"
            style="@style/login_edittext_style"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:hint="@string/user_in_new_password_login"
            android:inputType="textPassword"
            android:maxLength="14"
            android:singleLine="true" />

        <Button
            android:id="@+id/settingsave"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/login_button_selector"
            android:text="@string/complete"
            android:textColor="#ffffff"
            android:textSize="22sp" />

    </LinearLayout>


</LinearLayout>