<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <include layout="@layout/titlebar_onlytitle_toac" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="28dp"
                    android:background="@drawable/regsuc" />

                <TextView
                    android:id="@+id/regSuc_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="@string/user_id"
                    android:textColor="#4e4e4e"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:layout_marginTop="22dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_sended"
                    android:textColor="#5e5e5e"
                    android:textSize="16dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="27dp"
                    android:text="@string/email_adds"
                    android:textColor="#5e5e5e"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/email_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="#5e5e5e"
                    android:textSize="16dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_back_center"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:background="@drawable/loginbtn_text_bg"
            android:text="@string/back_mycenter"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </RelativeLayout>

</LinearLayout>